@@ -199,6 +199,8 @@
         www/vicidial/admin.php: Added daily rolling of vicidial_ccc_log records.
   * Add upstream Rev. 3027:
     - Update: www/agc/dispo_send_email.php: Added channel_group variable.
+  * Add upstream Rev. 3028:
+    - Update: bin/AST_VDauto_dial_FILL.pl: Small fix for data validation.
 
 2.25.27
   [Jörg Fring-Fürst]
